Refactor getLens logic to enhance readability and performance by using Promise.all for reference counts. Clean up commented code

--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
         }
       }
     ],
+    "commandPalette": [
+      {
+        "command": "codelens-position.helloWorld",
+        "when": "false"
+      }
+    ],
     "menus": {
       "editor/lineNumber/context": [
         {
           "command": "codelens-position.helloWorld",
-          "group": "navigation",
           "when": "true"
         }
       ]
