Implemented the command at the gutter context menu to run the code lens command, filter out other types of commands for now

--- a/package.json
+++ b/package.json
@@ -16,24 +16,20 @@
   "contributes": {
     "commands": [
       {
-        "command": "codelens-position.helloWorld",
-        "title": "Hello World",
-        "icon": {
-          "dark": "resources/edit.svg",
-          "light": "resources/edit.svg"
-        }
+        "command": "codelens-position.showReferences",
+        "title": "Show References"
       }
     ],
     "commandPalette": [
       {
-        "command": "codelens-position.helloWorld",
+        "command": "codelens-position.showReferences",
         "when": "false"
       }
     ],
     "menus": {
       "editor/lineNumber/context": [
         {
-          "command": "codelens-position.helloWorld",
+          "command": "codelens-position.showReferences",
           "when": "true"
         }
       ]
