Refactored to clear commands and decorations on editor closed and prevent command from being called on inactive editor

--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
       "editor/lineNumber/context": [
         {
           "command": "gutter-codelens.showReferences",
-          "when": "editorHasReferenceProvider && editorLineNumber in gutter-codelens.referenceLines && editorLineNumber not in gutter-codelens.lensLines"
+          "when": "editorFocus && editorHasReferenceProvider && editorLineNumber in gutter-codelens.referenceLines && editorLineNumber not in gutter-codelens.lensLines"
         },
         {
           "command": "gutter-codelens.codelensCommand",
-          "when": "editorHasReferenceProvider && editorLineNumber in gutter-codelens.lensLines"
+          "when": "editorFocus && editorHasReferenceProvider && editorLineNumber in gutter-codelens.lensLines"
         }
       ]
     }
