Added configuration to show or hide unfocused gutter lens

--- a/package.json
+++ b/package.json
@@ -58,6 +58,17 @@
           "when": "editorFocus && editorHasReferenceProvider && editorLineNumber in gutter-codelens.lensLines"
         }
       ]
+    },
+    "configuration": {
+      "type": "object",
+      "title": "Gutter CodeLens",
+      "properties": {
+        "gutterCodelens.showUnfocused": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show decorations for unfocused editors. Unfocused editors still won't update references automatically and will keep previous values until focused again."
+        }
+      }
     }
   },
   "scripts": {
